fix edit page button link

--- a/reportit/webpage/templates/webpage/editprofile.html
+++ b/reportit/webpage/templates/webpage/editprofile.html
@@ -108,7 +108,7 @@
 					<ul class="actions">
 						<li><input type="submit" value="Update" /></li>
 						<!-- <li><input type="reset" value="Cancel" class="alt" /></li> -->
-						<li><a href="edit" class="button alt small"/>Cancel</a></li>
+						<li><a href="/account/profile" class="button alt small"/>Cancel</a></li>
 					</ul>
 				</div>
 			</div>
