--- a/reportit/webpage/templates/webpage/editprofile.html
+++ b/reportit/webpage/templates/webpage/editprofile.html
@@ -28,33 +28,33 @@
 			<div class="row uniform 50%">
 				<div class="3u">Username: </div>
 				<div class="6u">
-					<input type="text" name="name" id="name" value="" placeholder="Name" disabled />
+					<input type="text" name="name" id="name" value={{request.user.username}} placeholder="Name" disabled />
 				</div>
 			</div>
 			<div class="row uniform 50%">
 				<div class="3u">Email: </div>
 				<div class="6u">
-					<input type="email" name="email" id="email" value="" placeholder="Email" disabled/>
+					<input type="email" name="email" id="email" value={{request.user.email}} placeholder="Email" disabled/>
 				</div>
 			</div>
 			{% if request.user.reporter|to_class_name == 'Reporter' %}
 			<div class="row uniform 50%">
 				<div class="3u">Gender: </div>
 				<div class="6u">
-					<input type="text" name="gender" id="gender" value="" placeholder="gender" />
+					<input type="text" name="gender" id="gender" value={{profile_user.gender}} placeholder="gender" />
 				</div>
 			</div>
 			{% endif %}
 			<div class="row uniform 50%">
 				<div class="3u">Phone Number: </div>
 				<div class="6u">
-					<input type="text" name="phone" id="phone" value="" placeholder="Phone" />
+					<input type="text" name="phone" id="phone" value={{profile_user.phone_number}} placeholder="Phone" />
 				</div>
 			</div>
 			<div class="row uniform 50%">
 				<div class="3u">Address: </div>
 				<div class="6u">
-					<input type="text" name="address" id="address" value="" placeholder="Address" />
+					<input type="text" name="address" id="address" value={{profile_user.address}} placeholder="Address" />
 				</div>
 			</div>
 			<!-- <div class="row uniform 50%">
@@ -103,7 +103,7 @@
 			<div class="row uniform 50%">
 				<div class="12u">Bio: </div>
 				<div class="12u">
-					<textarea name="bio" id="bio" placeholder="My bio" rows="6"></textarea>
+					<textarea name="bio" id="bio" placeholder="My bio" rows="6" >{{profile_user.about}}</textarea>
 				</div>
 			</div>
 			<div class="row uniform">
