Implemented file upload to AWS S3

--- a/reportit/webpage/templates/webpage/base.html
+++ b/reportit/webpage/templates/webpage/base.html
@@ -78,6 +78,8 @@
 						    <li><a href="/account/profile/" class="list-group-item" name="profile" id="profile">{{request.user.username}}'s Profile </a></li>
 						    {% if request.user|has_group:"Reporter" %}
 						      <li><a href="/account/submitConcern/" class="list-group-item">SubmitConcern</a></li>
+						    {% elif request.user|has_group:"Agent" %}
+						    	<li><a href="/account/uploadVerification/" class="list-group-item">Upload Verification File</a></li>
 						    {% endif %}
 
 						      <li><a href="/account/viewConcern/" class="list-group-item">View My Concerns</a></li>
