add view all concern column

--- a/reportit/webpage/templates/webpage/base.html
+++ b/reportit/webpage/templates/webpage/base.html
@@ -81,6 +81,8 @@
 						    {% endif %}
 
 						      <li><a href="/account/viewConcern/" class="list-group-item">View My Concerns</a></li>
+
+						      <li><a href="/account/viewAllConcerns/" class="list-group-item">View All Concerns</a></li>
 						    </ul>
 						</div>
 					</div>
