--- a/reportit/webpage/templates/webpage/viewPersonalConcern.html
+++ b/reportit/webpage/templates/webpage/viewPersonalConcern.html
@@ -80,7 +80,7 @@
 										   <td> {{ item.submitted_time }} </td>
 
 										   <td> 	
-											<form method="post" action="/account/viewSpecificConcern/id?={{ item.concern_id }}">
+											<form method="post" action="/account/viewSpecificConcern/id?={{ item.id }}">
 
 											{% csrf_token %}
 
@@ -89,7 +89,7 @@
 										   </td>
 
 										   <td>
-											<form method="post" action="/account/removeSpecificConcern/id?={{ item.concern_id }}">
+											<form method="post" action="/account/removeSpecificConcern/id?={{ item.id }}">
 
 											{% csrf_token %}
 
