--- a/reportit/webpage/templates/webpage/viewSpecificConcern.html
+++ b/reportit/webpage/templates/webpage/viewSpecificConcern.html
@@ -40,27 +40,43 @@
 						<div class="table-wrapper">
 							{% if concern != Null %}
 							<table class="table table-striped">
-								<ul>
-									<thread>
-										<tr>
-											<th> {{ concern.title }} </th>
-											<th></th>
-										</tr>
-									</thread>
-									<tbody>
-										<td> {{ concern.content }} </td>
-										<td>
 
-											<form method="post" action="/account/editSpecificConcern/id?={{ concern.concern_id }}">
 
-											{% csrf_token %}
+								<div class="col-md-6">
 
-											<button type="submit" id="concern_submit_button" class="btn btn-primary ">Edit</button>
-											</form> 
+								<div style="margin:10px">
+								<label>Concern Title</label>{{ concern.title }}
+								</div>
+								<div style="margin:10px">
+								<label>Reporter</label>{{ concern.reporter.user }}
+								</div>
+								<div style="margin:10px">
+								<label>Report Agent</label>
+								{% for ele in concern.target_agent.all %}
 
-										</td>
-									</tbody>
-								</ul>
+						    	{{ ele.legal_name }}, 
+
+						    	{% endfor %}
+						   		</div>
+								<div style="margin:10px">
+								<label>Concern Content</label>{{ concern.content }}						
+								</div>
+
+									
+								{% if user == concern.reporter.user %}
+								
+
+									<form method="post" action="/account/editSpecificConcern/id?={{ concern.id }}">
+
+									{% csrf_token %}
+
+									<button type="submit" id="concern_submit_button" class="btn btn-primary ">Edit</button>
+									</form> 
+
+								{% endif %}
+								</div>
+								
+								
 							</table>
 							{% else %}
 							<a> No data has been retriven! </a>
