--- a/reportit/webpage/templates/webpage/viewSpecificConcern.html
+++ b/reportit/webpage/templates/webpage/viewSpecificConcern.html
@@ -75,6 +75,14 @@
 
 								{% endif %}
 								</div>
+
+								<div class="col-md-6">
+									{% if concern.image %}
+										<img src="{% static 'images/not-available.jpg' %}">
+									{% else %}
+										<img src="{% static 'images/not-available.jpg' %}">
+									{% endif %}
+								</div>
 								
 								
 							</table>
