upvote without clarify people

--- a/reportit/webpage/templates/webpage/viewPersonalConcern.html
+++ b/reportit/webpage/templates/webpage/viewPersonalConcern.html
@@ -93,7 +93,7 @@
 
 											{% csrf_token %}
 
-											<button type="submit" id="concern_submit_button" class="btn btn-primary ">Remove</button>
+											<button type="submit" id="concern_submit_button" class="btn btn-danger ">Remove</button>
 											</form> 
 										   </td>
 
