--- a/reportit/webpage/templates/webpage/viewAllConcerns.html
+++ b/reportit/webpage/templates/webpage/viewAllConcerns.html
@@ -27,7 +27,7 @@
 	<!-- Main -->
 	<section id="main" class="container">
 		<header>
-			<h2>My Concerns</h2>
+			<h2>View All Concerns</h2>
 			<p>All of the concerns that have been published.</p>
 		</header>
 		{% if concernNotExist %}
@@ -58,8 +58,8 @@
 											<!-- <th> Content </th> -->
 											<th> Time submitted </th>
 
-											<th> </th>
-											<th> </th>
+											<th> View</th>
+											<th> Remove</th>
 										</tr>
 									</thread>
 									<tbody>
@@ -88,16 +88,18 @@
 											</form> 
 										   </td>
 
-										   {% if user == item.reporter.user %}
+										   
 										   <td>
+										   	{% if user == item.reporter.user %}
 											<form method="post" action="/account/removeSpecificConcern/id?={{ item.id }}">
 
 											{% csrf_token %}
 
-											<button type="submit" id="concern_submit_button" class="btn btn-primary ">Remove</button>
+											<button type="submit" id="concern_submit_button" class="btn btn-danger ">Remove</button>
 											</form> 
+											{% endif %}
 										   </td>
-										   {% endif %}
+										   
 
 									  </tr>
 									  {% endfor %}
