--- a/reportit/webpage/templates/webpage/viewSpecificConcern.html
+++ b/reportit/webpage/templates/webpage/viewSpecificConcern.html
@@ -62,6 +62,10 @@
 								<label>Concern Content</label>{{ concern.content }}						
 								</div>
 
+								<div style="margin:10px">
+								<label>Upvote Count</label>{{ concern.upvote_count }}						
+								</div>
+
 									
 								{% if user == concern.reporter.user %}
 								
@@ -71,6 +75,15 @@
 									{% csrf_token %}
 
 									<button type="submit" id="concern_submit_button" class="btn btn-primary ">Edit</button>
+									</form> 
+
+								{% else %}
+
+									<form method="post" action="/account/upvoteSpecificConcern/id?={{ concern.id }}">
+
+									{% csrf_token %}
+
+									<button type="submit" id="concern_submit_button" class="btn btn-info ">Upvote</button>
 									</form> 
 
 								{% endif %}
