search concern template

--- a/reportit/webpage/templates/webpage/base.html
+++ b/reportit/webpage/templates/webpage/base.html
@@ -83,6 +83,8 @@
 						      <li><a href="/account/viewConcern/" class="list-group-item">View My Concerns</a></li>
 
 						      <li><a href="/account/viewAllConcerns/" class="list-group-item">View All Concerns</a></li>
+
+						      <li><a href="/account/searchConcern/" class="list-group-item">Search Concern</a></li>
 						    </ul>
 						</div>
 					</div>
