--- a/reportit/webpage/templates/webpage/viewSearchConcern.html
+++ b/reportit/webpage/templates/webpage/viewSearchConcern.html
@@ -27,8 +27,8 @@
 	<!-- Main -->
 	<section id="main" class="container">
 		<header>
-			<h2>View All Concerns</h2>
-			<p>All of the concerns that have been published.</p>
+			<h2>View Search Concerns</h2>
+			<p>All of the concerns that have been arranged in search order.</p>
 		</header>
 		{% if concernNotExist %}
         <div id="require-signup" class="alert alert-danger alert-dismissible" role="alert">Cannot find your concern!</div>
