add fuzzy search to the program

--- a/reportit/webpage/templates/webpage/search.html
+++ b/reportit/webpage/templates/webpage/search.html
@@ -29,10 +29,10 @@
 							<form method="post" action="/account/searchConcern/">
 								{% csrf_token %}
 								Search Content:<br>
-								
+
 							  	<input type="text" name="search" required id="search" maxlength="500" />
 
-    							<button type="submit" id="concern_submit_button" class="btn btn-primary btn-lg btn-block login-button">Submit</button>							
+    							<button type="submit" id="search_button" class="btn btn-primary btn-lg btn-block login-button">Submit</button>							
 							
 							</form> 
 							<!--
