mark as resolve finish

--- a/reportit/webpage/templates/webpage/viewPersonalConcern.html
+++ b/reportit/webpage/templates/webpage/viewPersonalConcern.html
@@ -58,8 +58,8 @@
 											<!-- <th> Content </th> -->
 											<th> Time submitted </th>
 
-											<th> </th>
-											<th> </th>
+											<th> View</th>
+											<th> Remove</th>
 										</tr>
 									</thread>
 									<tbody>
