--- a/reportit/webpage/templates/webpage/base.html
+++ b/reportit/webpage/templates/webpage/base.html
@@ -67,7 +67,7 @@
         {% else %}
 			<!-- Main -->
 			<section style="padding: 20px">
-				<div class="col-md-3" style="padding-top:50px">
+				<div class="col-xs-12 col-md-3 col-lg-3" style="padding-top:50px">
 					<div class="panel">
 						<div class="panel-heading">ReportIt Menu</div>
 						<div class="panel-body">
@@ -92,7 +92,7 @@
 					</div>
 					
 				</div>
-				<div class="col-md-9">
+				<div class="col-xs-12 col-md-9 col-lg-9">
 					{% block content %}{% endblock %}
 				</div>
 			</section>
