Fix bug of showing success msg after failed upload

--- a/reportit/webpage/templates/webpage/uploadVerification.html
+++ b/reportit/webpage/templates/webpage/uploadVerification.html
@@ -25,7 +25,7 @@
             </form>
         
             This is a file upload page
-            Here, you can upload your verification file.
+            Here, you can upload a new verification file.
           </div>
         </div>
       </section>
