--- a/reportit/webpage/templates/webpage/profile.html
+++ b/reportit/webpage/templates/webpage/profile.html
@@ -74,7 +74,7 @@
 					<td>
 					<div class="12u">
 						<ul class="actions">
-							<li><a href="edit" class="button small"/>Edit</a></li>
+							<li><a href="edit" class="button small" name="edit_button"/>Edit</a></li>
 							<!-- <li><input type="reset" value="Cancel" class="alt" /></li> -->
 						</ul>
 					</div>
