--- a/reportit/webpage/templates/webpage/viewPersonalConcern.html
+++ b/reportit/webpage/templates/webpage/viewPersonalConcern.html
@@ -84,7 +84,7 @@
 
 											{% csrf_token %}
 
-											<button type="submit" id="concern_submit_button" class="btn btn-primary ">View</button>
+											<button type="submit" id="view" class="btn btn-primary " name="view">View</button>
 											</form> 
 										   </td>
 
@@ -93,7 +93,7 @@
 
 											{% csrf_token %}
 
-											<button type="submit" id="concern_submit_button" class="btn btn-danger ">Remove</button>
+											<button type="submit" id="remove" class="btn btn-danger " name="remove">Remove</button>
 											</form> 
 										   </td>
 
