--- a/reportit/webpage/templates/webpage/editprofile.html
+++ b/reportit/webpage/templates/webpage/editprofile.html
@@ -109,7 +109,7 @@
 			<div class="row uniform">
 				<div class="12u">
 					<ul class="actions">
-						<li><input type="submit" value="Update" /></li>
+						<li><input type="submit" value="Update" name="update_button"/></li>
 						<!-- <li><input type="reset" value="Cancel" class="alt" /></li> -->
 						<li><a href="/account/profile" class="button alt small"/>Cancel</a></li>
 					</ul>
