--- a/reportit/webpage/templates/webpage/viewSpecificConcern.html
+++ b/reportit/webpage/templates/webpage/viewSpecificConcern.html
@@ -82,7 +82,7 @@
 
 									{% csrf_token %}
 
-									<button type="submit" id="concern_submit_button" class="btn btn-primary ">Edit</button>
+									<button type="submit" id="edit" class="btn btn-primary " name="edit">Edit</button>
 									</form> 
 
 									<form method="post" action="/account/resolveSpecificConcern/id?={{ concern.id }}">
