--- a/reportit/webpage/templates/webpage/base.html
+++ b/reportit/webpage/templates/webpage/base.html
@@ -38,7 +38,7 @@
 					{% if not user.is_authenticated %}
 					<li><a href="#" class="button">Sign Up</a></li>
 					{% else %}
-					<li><a href="/logout?next=/" class="button">Log Out</a></li>
+					<li><a href="/logout?next=/" class="button" name="logout">Log Out</a></li>
 					{% endif %}
 				</ul>
 			</nav>
