--- a/reportit/webpage/templates/webpage/dashboard.html
+++ b/reportit/webpage/templates/webpage/dashboard.html
@@ -8,7 +8,7 @@
           <p>You have successfully logged in!</p>
         </header>
         <div class="row">
-          <div class="12u">
+          <div class="12u" id="welcome">
 
         <!-- Table -->
             This is a dashboard page
