--- a/reportit/webpage/static/assets/css/main.css
+++ b/reportit/webpage/static/assets/css/main.css
@@ -1810,7 +1810,7 @@
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #e89980;
+		color: grey;
 		text-decoration: none;
 	}
 
