--- a/reportit/webpage/templates/webpage/viewSpecificConcern.html
+++ b/reportit/webpage/templates/webpage/viewSpecificConcern.html
@@ -85,11 +85,23 @@
 									<button type="submit" id="concern_submit_button" class="btn btn-primary ">Edit</button>
 									</form> 
 
+									{% if not concern.isSolved %}
+
 									<form method="post" action="/account/resolveSpecificConcern/id?={{ concern.id }}">
 
 									{% csrf_token %}
 									<button type="submit" id="resolve_submit_button" class="btn btn-primary ">Mark as Solve</button>
 									</form> 
+
+									{% else %}
+
+									<form method="post" action="/account/unsolveSpecificConcern/id?={{ concern.id }}">
+
+									{% csrf_token %}
+									<button type="submit" id="unsolve_submit_button" class="btn btn-primary ">Mark as Unsolve</button>
+									</form> 
+
+									{% endif %}
 
 								{% elif isagent %}
 
