complete send notification email function; partial complete facebook login function

--- a/reportit/webpage/templates/webpage/login.html
+++ b/reportit/webpage/templates/webpage/login.html
@@ -51,6 +51,10 @@
 							<a  style="color:blue;text-align:center;" class="btn btn-block btn-social btn-lg btn-google" id="google_login" href="{% url 'social:begin' 'google-oauth2' %}">
     							<span class="fa fa-google"></span> Login with Google
   							</a>
+
+							<a  style="color:blue;text-align:center;" class="btn btn-block btn-social btn-lg btn-facebook" id="facebook_login" href="{% url 'social:begin' 'facebook-oauth2' %}">
+    							<span class="fa fa-facebook"></span> Login with Facebook
+  							</a>
 						</div>
 
 					</div>
