add a few restriction

--- a/reportit/webpage/templates/webpage/viewPersonalConcern.html
+++ b/reportit/webpage/templates/webpage/viewPersonalConcern.html
@@ -28,7 +28,7 @@
 	<section id="main" class="container">
 		<header>
 			<h2>My Concerns</h2>
-			<p>All of the concerns that have been published.</p>
+			<p>All of the concerns that has not solved</p>
 		</header>
 		{% if concernNotExist %}
         <div id="require-signup" class="alert alert-danger alert-dismissible" role="alert">Cannot find your concern!</div>
