--- a/reportit/webpage/templates/webpage/viewSpecificConcern.html
+++ b/reportit/webpage/templates/webpage/viewSpecificConcern.html
@@ -112,7 +112,7 @@
 
 								{% elif isagent %}
 
-									
+									{% if not concern.isSolved %}
 
 									<form method="post" action="/account/resolveSpecificConcern/id?={{ concern.id }}">
 
@@ -120,12 +120,13 @@
 									<button type="submit" id="resolve_submit_button" class="btn btn-primary ">Mark as Solve</button>
 									</form> 
 
-
-									<form method="post" action="/account/duplicateSpecificConcern/id?={{ concern.id }}">
+									<form method="post" action="/account/resolveSpecificConcern/id?={{ concern.id }}">
 
 									{% csrf_token %}
 									<button type="submit" id="downvote_submit_button" class="btn btn-danger ">Mark as Duplicate</button>
 									</form> 
+
+									{% endif %}									
 
 
 									<form method="post" action="/account/respondConcern/id?={{ concern.id }}">
