--- a/reportit/webpage/templates/webpage/base.html
+++ b/reportit/webpage/templates/webpage/base.html
@@ -79,7 +79,7 @@
 						    {% if request.user|has_group:"Reporter" %}
 						      <li><a href="/account/submitConcern/" class="list-group-item">SubmitConcern</a></li>
 						    {% elif request.user|has_group:"Agent" %}
-						    	<li><a href="/account/uploadVerification/" class="list-group-item">Upload Verification File</a></li>
+						    	<li><a href="/account/uploadVerification/" class="list-group-item">Upload a new Verification File</a></li>
 						    {% endif %}
 
 						      <li><a href="/account/viewConcern/" class="list-group-item">View My Concerns</a></li>
