change the facebook login to github login

--- a/reportit/webpage/templates/webpage/login.html
+++ b/reportit/webpage/templates/webpage/login.html
@@ -52,8 +52,8 @@
     							<span class="fa fa-google"></span> Login with Google
   							</a>
 
-							<a  style="color:blue;text-align:center;" class="btn btn-block btn-social btn-lg btn-facebook" id="facebook_login" href="{% url 'social:begin' 'facebook-oauth2' %}">
-    							<span class="fa fa-facebook"></span> Login with Facebook
+							<a  style="color:blue;text-align:center;" class="btn btn-block btn-social btn-lg btn-github" id="github_login" href="{% url 'social:begin' 'github' %}">
+    							<span class="fa fa-github"></span> Login with Github
   							</a>
 						</div>
 
