--- a/reportit/webpage/templates/webpage/viewProfile.html
+++ b/reportit/webpage/templates/webpage/viewProfile.html
@@ -17,7 +17,7 @@
 </header>
 
 {% if isagent %}
-<center><img src="{{profile_user.agentimage}}" height="100" width="100" align="middle"></img></center>
+<center><img src="http://localhost:8000/static/images/default_avatar.png" height="100" width="100" align="middle"></img></center>
 
 {% else %}
 
